# Swindle-Bot

./: .gitignore  Cargo.toml  README.md
config/: about.cfg  cooldowns.cfg  startup.cfg
databases/: main.db
src/: events.rs  karma.rs  main.rs
src/commands/: about.rs  add.rs  mod.rs  profile.rs  rank.rs
src/databases/: mod.rs
