[package]
name = "test-project"
version = "0.1.0"
authors = ["nomnomab <nomnomab1@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.8"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "utils"]
version = "0.8"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]